more weird initialization issues; fixed problems with restarting level after death; minor gui improvements